--- a/templates/user_form_update.html
+++ b/templates/user_form_update.html
@@ -1,44 +1,63 @@
 {% extends 'plantilla_base.html' %}
 
-{% block dropdown %}
-<li><a href="./?action=users_index">Usuarios</a></li> 
-<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Administraci&oacute;n <span class="caret"></span></a>
-    <ul class="dropdown-menu">
-        <li><a href="./?action=users_index">Usuarios</a> </li>
-        <li><a href="#Roles">Roles</a> </li>
-        <li><a href="#Permisos">Permisos</a> </li>
-    </ul>
-</li> 
-{% endblock %}
-
 {% block body %}
-<div class="container">
-  <h2>Actualizar Usuario </h2>
-  <form action="./?action=user_updated" method="post">
+<form action="./?action=user_updated" method="post">
+   <h2 align="center">Actualizar usuario</h2>
+ <div class="container">
+        <div class="row">
+            <div align="center">
+                <div class="well well-sm">
+                    <form class="form-horizontal" method="post">
+                        <div class="form-group">
+                            <fieldset>
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="first_name" name="first_name" type="text" value="{{ user.first_name }}" class="form-control" required >
+                                </div>
+                            </fieldset>
+                            <br>
 
-    <div class="form-group">
-      <label for="first_name">Nombre:</label>
-      <input type="text" class="form-control" id="first_name" placeholder="Nombre" name="first_name" value={{ user.first_name }} required  >
-    </div>
+                            <fieldset>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="last_name" name="last_name" type="text" value="{{ user.last_name }}" class="form-control" required>
+                                </div>
+                            </div>
+                            </fieldset>
+                            <br>
 
-    <div class="form-group">
-      <label for="last_name">Apellido:</label>
-      <input type="text" class="form-control" id="last_name" placeholder="Apellido" name="last_name" value={{ user.last_name }} required  >
-    </div>
+                            <fieldset>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="email" name="email" type="email" value={{ user.email }}" class="form-control" required>
+                                </div>
+                            </div>
+                            </fieldset>
+                            <br>
+                            
+                            <fieldset>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="username" name="username" type="text" value=""{{ user.username }}"" class="form-control" required>
+                                </div>
+                            </div>
+                            </fieldset>
+                            <br>
 
-     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="E-mail" name="email" value={{ user.email }} required  >
-     </div> 
+                            <fieldset>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="password" name="password" type="password" value="*******" class="form-control" required>
+                                </div>
+                            </div>
+                            </fieldset>
+                            <br>
 
-    <div class="form-group">
-      <label for="username">Usuario:</label>
-      <input type="text" class="form-control" id="username" placeholder="Usuario" name="username" value={{ user.username }} required  >
-    </div> 
-
-    <div class="form-group">
-      <label for="pwd">Contrasena:</label>
-      <input type="password" class="form-control" id="password" placeholder="Enter password" name="password" value={{ user.password }}  required>
+                            <fieldset>
       <input type="hidden" id='id' name='id' value={{ user.id }}> 
     </div>
     <button type="submit" class="btn btn-default">Modificar usuario</button>
