--- a/templates/pacient_new.html
+++ b/templates/pacient_new.html
@@ -1,27 +1,27 @@
 {% extends 'plantilla_base.html' %}
 
-{% block head%} <link rel="stylesheet" type="text/css" href="../css/user_create.css"> {% endblock %}
-
 {% block body %}
 
 <div id="alta-paciente" align="center">
  <h1>Ingreso nuevo de paciente</h1>
 <form action="./?action=pacient_added" method='post'>
-    <div class="container">
+   <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div align="center">
                 <div class="well well-sm">
                     <form class="form-horizontal" method="post">
                         <fieldset>
-                           
-                            <div class="form-group">
+                          <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                    Nombre:
                                     <input id="first_name" name="first_name" type="text" placeholder="Nombre" class="form-control" required >
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
@@ -29,7 +29,10 @@
                                     <input id="last_name" name="last_name" type="text" placeholder="Apellido" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
@@ -37,8 +40,10 @@
                                     <input id="fecha_de_nacimiento" name="birth_date" type="date" placeholder="Fecha de Nacimiento" class="form-control" required>
                                 </div>
                             </div>
-                    
+                            </fieldset>
                             <br>
+                            
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
@@ -49,7 +54,10 @@
                                     </select> 
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
@@ -62,7 +70,10 @@
                                     </select> 
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
@@ -70,7 +81,10 @@
                                    <input id="documento" name="dni" type="numeric" placeholder="N de Doc" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
@@ -78,7 +92,10 @@
                                    <input id="domicilio" name="address" type="text" placeholder="Direccion de Domicilio" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                              <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
@@ -86,7 +103,10 @@
                                    <input id="telefono" name="phone" type="text" placeholder="Telefono" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                              <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
@@ -99,20 +119,24 @@
                                           <option value="Medicus">Medicus</option>
                                     </select> 
                                 </div>
-                            </div>
+                              </div>
+                            </fieldset>
                             <br>
 
+                            <fieldset>
                             <div class="form-group">
                                 <div class="col-md-12 text-center">
                                     <button type="submit"  id='btnSubmit'>Agregar paciente</button>
                                 </div>
                             </div>
                         </fieldset>
-                    </form>
                 </div>
             </div>
         </div>
     </div>
 </form>
-
+<br>
+<br>
+<br>
+<br>
 {% endblock %}
