--- a/templates/user_new.html
+++ b/templates/user_new.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla_base.html' %}
+
 {% block body %}
 
 <div id="alta-usuario" align="center">
@@ -6,7 +7,7 @@
 <form action="./?action=user_added" method='post'>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div align="center">
                 <div class="well well-sm">
                     <form class="form-horizontal" method="post">
                         <fieldset>
@@ -16,43 +17,57 @@
                                     <input id="first_name" name="first_name" type="text" placeholder="Nombre" class="form-control" required >
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                     <input id="last_name" name="last_name" type="text" placeholder="Apellido" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
-                                    <input id="email" name="email" type="text" placeholder="Email" class="form-control" required>
+                                    <input id="email" name="email" type="email" placeholder="Email" class="form-control" required>
                                 </div>
                             </div>
-                    
+                            </fieldset>
                             <br>
+                            
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                     <input id="username" name="username" type="text" placeholder="Usuario" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
+
+                            <fieldset>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                     <input id="password" name="password" type="password" placeholder="Contrasena" class="form-control" required>
                                 </div>
                             </div>
+                            </fieldset>
                             <br>
-                          
+
+                            <fieldset>
                             <div class="form-group">
                                 <div class="col-md-12 text-center">
                                     <button type="submit"  id='btnSubmit'>Crear usuario</button>
                                 </div>
                             </div>
-                        </fieldset>
+                            </fieldset>
+                            <br>
                     </form>
                 </div>
             </div>
