implemento login y manejo de sesiones

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,26 +5,23 @@
 {% block body%}
 
   <div class="login-menu">
+    {% if showLoginError %}
+      <div class="alert alert-danger"> Usuario y/o Contraseña ingresados incorrectos </div>
+    {% endif %}
       <div class="login-menu-title">
         <span class="text1"> Iniciar sesión </span>
      </div>
-
-      <form action="./?action=admin" method="post">
+      <form action="./?action=do-login" method="post">
         <br>
           <div>Usuario </div>
-          <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
+          <input type="text" required name="username" id="username" title="usuario" placeholder="Usuario">
           <div>Contraseña </div>
-          <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">
+          <input type="password" required name="password" id="password" title="password" placeholder="Contraseña">
           <br> <br>
           <div class="login-accept-button">
             <button type= "submit" id='btnSubmit'> Aceptar </button>
-            
           </div>
-
       </form>
-
   </div>
-
-
 
 {% endblock %}
