--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -18,14 +18,24 @@
 
  <body>
 
+
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
       <a class="navbar-brand" href="#">Hospital Dr. Ricardo Gutiérrez</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="./?action=index"><span class="glyphicon glyphicon-home"></span> Inicio</a></li>
-      {% block dropdown %}   {% endblock %}
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="./?action=index"><span class="glyphicon glyphicon-home"></span> Inicio</a></li>
+        <li class="dropdown">
+
+     {% block dropdown %}   {% endblock %}
 
    
         <li><a href="./?action=pacients_index">Pacientes</a></li> 
