--- a/templates/users_index.html
+++ b/templates/users_index.html
@@ -69,7 +69,17 @@
   </table>
   </div>
 </div>
+</thead>
+</table>
+</div>
+</div>
 
+
+<br>
+<br>
+<br>
+<br>
+<br>
 <style>
 div.table-responsive {
   background: white;
