--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -18,6 +18,10 @@
 
  <body>
 
+<div>
+  <img src='/img/hospital2.jpg' height=420" width="1600">
+</div>
+
 
 
 <nav class="navbar navbar-inverse">
@@ -28,6 +32,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
+     
+      <a class="navbar-brand">  <img src= "/img/logo.gif" id="logo" width="33" height="33"  > 
       <a class="navbar-brand" href="#">Hospital Dr. Ricardo Gutiérrez</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
