--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-#logo {
-  top:  30px; 
-  left: 30px;
-  width: 33px;
-  height: 33px;
-}
 
+#header {
+    width: 100%;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: 1px solid white;
+}
 
 /** este footer se va a posicionar siempre al final
  * el width en 99% es porque sino queda mas ancho que el head */
