--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -19,7 +19,7 @@
  <body>
 
 <div>
-  <img src='/img/hospital2.jpg' height=400" width="1550">
+  <img src='/img/hospital2.jpg' id="header" height=400" width="1550">
 </div>
 
 
