--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -26,7 +26,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">Hospital Dr. Ricardo Gutiérrez</a>
     </div>
@@ -51,6 +51,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
      {% if session.IsLoggedIn %}
+      <p class="navbar-text"> <span class="glyphicon glyphicon-user"></span> Bienvenido, {{ session.UserName }} !</p>
       <li><a href=./?action=do-logout><span class="glyphicon glyphicon-log-out"></span> Cerrar sesión</a></li>
      {% else %}
       <li><a href=./?action=login><span class="glyphicon glyphicon-log-in"></span> Iniciar sesión</a></li>
