--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -18,10 +18,10 @@
 
  <body>
 
-<div>
-  <img src='/img/hospital2.jpg' id="header" height=400" width="1550">
+<!-- <div>
+  <img src='/img/hospital2.jpg' id="header" height="400" width="1550">
 </div>
-
+-->
 
 
 <nav class="navbar navbar-inverse">
@@ -60,6 +60,36 @@
       <li><a href=./?action=do-logout><span class="glyphicon glyphicon-log-out"></span> Cerrar sesión</a></li>
      {% else %}
       <li><a href=./?action=login><span class="glyphicon glyphicon-log-in"></span> Iniciar sesión</a></li>
+
+
+
+
+ <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the modal.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
+
+
+
+
+
     {% endif %}
     </ul>
   </div>
